# sdk-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
.serena/: project.yml
.serena/memories/project/: commands.md  overview.md
.serena/memories/tasks/: task-9-client-implementation.md
llm4agents/: __init__.py  agents.py  client.py  errors.py  types.py
llm4agents/chat/: completions.py  conversation.py  prompt_fallback.py  types.py
llm4agents/embeddings/: __init__.py  embeddings.py  types.py
llm4agents/tools/: __init__.py  connect.py  tools.py  types.py
llm4agents/transfer/: signer.py  transfer.py  types.py
llm4agents/transport/: http.py  mcp.py  mcp_http.py  mcp_stdio.py
llm4agents/wallets/: __init__.py  types.py  wallets.py
llm4agents/x402/: __init__.py  client.py  payment.py  signer.py  types.py
tests/: test_client.py  test_errors.py  test_tools.py  test_transfer.py  test_wallets.py
tests/agents/: test_agents.py
tests/chat/: test_completions.py  test_conversation.py  test_prompt_fallback.py
tests/tools/: test_connect.py  test_workspace.py
tests/tools/integration/: test_filesystem_mcp.py
tests/transport/: test_http.py  test_mcp.py  test_mcp_stdio.py
tests/x402/: test_conversation_receipt.py  test_payment.py  test_signer.py  test_transport.py
