[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm4agents-sdk"
version = "2.3.1"
description = "Python SDK for llm4agents.com — gasless AI agent infrastructure"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "httpx[http2]>=0.27.0",
    "eth-account>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["llm4agents"]
